Fixed some layout bugs and cleaned up the profile redirect.

--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -96,18 +96,17 @@ body {
 .loginBtn{
     width: 440px;
     height: 50px;
-
     border-radius:30px;
-
     font-size: 20px;
-
     background-color: #92140C;
     color: white;
-
     margin-top: 10px;
     border:none;
-
     cursor: pointer;
+}
+
+.loginBtn:hover {
+    background-color: #7D110A;
 }
 
 a {
